--- a/views/blog/detail.html
+++ b/views/blog/detail.html
@@ -42,9 +42,11 @@
                 >Home</a
               >
             </li>
-            <li class="nav-item">
+            {{if .DataSesion.IsLogin}}
+            <li class="nav-item me-2">
               <a class="nav-link" href="/add-blog">Add Project</a>
             </li>
+            {{end}}
           </ul>
           <a href="/contact">
             <button class="btn btn-dark text-white" type="submit">
