--- a/views/blog/edit-project.html
+++ b/views/blog/edit-project.html
@@ -37,11 +37,11 @@
             <li class="nav-item mx-4">
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active fw-bold" href="/add-blog"
-                >Add Project</a
-              >
+            {{if .DataSesion.IsLogin}}
+            <li class="nav-item me-2">
+              <a class="nav-link" href="/add-blog">Add Project</a>
             </li>
+            {{end}}
           </ul>
           <a href="/contact">
             <button class="btn btn-dark text-white" type="submit">
